# ccrs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: connect_to_proxy.rs  enable_library_logging.rs  rest_get_balance.rs  rest_get_position.rs  rest_market_data.rs  rest_order_execution.rs  websocket_read_batch.rs  websocket_subscribe_fill.rs  websocket_subscribe_order.rs  websocket_subscribe_top_of_book.rs  websocket_subscribe_trade.rs
src/: exchange_client.rs  exchanges.rs  lib.rs  logger.rs  types.rs  utils.rs
src/exchange_client/: common.rs  rest.rs  websocket.rs
src/exchanges/: binance_spot.rs
src/networking/: http.rs  websocket.rs
tests/: binance_spot.rs  binance_usds_margined_futures.rs  bybit.rs  coinbase.rs  common.rs  gateio_perpetual_futures.rs  gateio_spot_and_margin.rs  htx_spot.rs  okx.rs
tests/binance_spot/: rest_get_balance.rs  rest_market_data.rs  rest_order_execution.rs  websocket_subscribe_order.rs  websocket_subscribe_top_of_book.rs  websocket_subscribe_trade.rs
tests/binance_usds_margined_futures/: rest_get_balance.rs  rest_get_position.rs  rest_market_data.rs  rest_order_execution.rs  websocket_subscribe_order.rs  websocket_subscribe_top_of_book.rs  websocket_subscribe_trade.rs
tests/bybit/: rest_get_balance.rs  rest_get_position.rs  rest_market_data.rs  rest_order_execution.rs  websocket_subscribe_fill.rs  websocket_subscribe_order.rs  websocket_subscribe_top_of_book.rs  websocket_subscribe_trade.rs
tests/coinbase/: rest_get_balance.rs  rest_market_data.rs  rest_order_execution.rs  websocket_subscribe_order.rs  (+2 more)
(+55 files in other folders)
