[package]
name = "ccrs"
version = "0.4.1"
edition = "2024"

[package.metadata.release]
push = true
tag-name = "v{{version}}"
sign-tag = false
pre-release-commit-message = "Release version {{version}}"
publish = false

[features]
max_log_level_error   = []
max_log_level_warn    = []
max_log_level_info    = []
max_log_level_debug   = []
max_log_level_fine    = []
max_log_level_finer   = []
max_log_level_finest  = []

default = ["native-tls"]

rustls-tls = []

native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.13"
hmac-sha256 = "1.1"
native-tls = "0.2"
once_cell = "1"

reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-native-tls = "0.3"
tokio-socks = "0.5"

tokio-tungstenite = { version = "0.29", default-features = false, features = ["native-tls"] }

tokio-util = { version = "0.7", features = ["full"] }
tungstenite = { version = "0.29", default-features = false }
url = "2"
